--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
     }
   ],
   "dependencies": {
-    "socket.io": "1.3.7",
-    "tgi-core": "*",
-    "tgi-spec": "*",
-    "onsenui": "*"
-  },
-  "scripts": {
-    "test": "node spec/node-runner.js"
+    "marked": "^0.3.12",
+    "onsenui": "*",
+    "tgi-core": "^0.4.47",
+    "tgi-spec": "*"
   },
   "repository": {
     "type": "git",
